# gpx-standardiser

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: project.mdc  python.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: config.yaml
docs/adr/: 0001-python-and-tooling.md  0002-filename-format.md  0003-gpx-metrics-calculation.md  0004-description-and-metadata.md  0005-cli-and-output-workflow.md  0006-test-coverage.md  0007-application-config-location.md
src/gpx_standardiser/: __init__.py  cli.py  description_hints.py  gpx_stats.py  naming.py  plan_report.py  rename.py  ride_difficulty.py  units.py
src/gpx_standardiser/config/: __init__.py  join_words.yaml
tests/: test_cli_plan_csv.py  test_cli_plan_interactive.py  test_cli_rename_help.py  test_config_join_words.py  test_description_hints.py  test_gpx_stats.py  test_naming.py  test_plan_report.py  test_rename.py  test_ride_difficulty.py  test_units.py
tests/fixtures/: __init__.py  gpx_build.py
