[project]
name = "gpx-standardiser"
version = "0.1.0"
description = "Standardise cycling club GPX filenames (distance, ascent, description slug)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "gpxpy>=1.6.2",
    "pyyaml>=6.0.1",
    "typer>=0.26.4",
]

[project.scripts]
gpx-standardiser = "gpx_standardiser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpx_standardiser"]

[tool.hatch.build.targets.sdist.force-include]
# Mirror repo layout in the sdist so building a wheel from the sdist still finds
# this path for `wheel.force-include` (Hatchling >= 1.19).
"config/config.yaml" = "config/config.yaml"

[tool.hatch.build.targets.wheel.force-include]
"config/config.yaml" = "gpx_standardiser/bundled_config.yaml"

[tool.hatch.build]
include = ["src/gpx_standardiser/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=gpx_standardiser",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
pythonpath = ["tests"]

[tool.coverage.run]
source = ["gpx_standardiser"]
omit = ["*/cli.py"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = ["pytest>=8.4.0", "pytest-cov>=6.0.0", "ruff>=0.15.15"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/gpx_standardiser/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
